--- a/laravel/resources/lang/pt_BR.json
+++ b/laravel/resources/lang/pt_BR.json
@@ -8,7 +8,8 @@
     "Login": "Entrar",
     "Register": "Registre-se",
     "Home": "Principal",
-    "Logout": "Sair"
+    "Logout": "Sair",
+    "User authenticated successfully!": "Usuário autenticado com sucesso!"
 
 
 }
